files/css/main.css
/* userbyte.xyz main.css */

/* ub color palette:
           bg:   #262626
    dark gray:   #404040
   light gray:   #808080
*/

@import url('https://fonts.googleapis.com/css?family=Source+Code+Pro');

body {
  font-family: 'Source Code Pro';
  background-color: #262626; /* <-- fallback bg color */
  background-image: url(../img/bg-1440p.png);
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-position: center;
  background-size: cover;
}

h1 {
  font-weight: bold;
  color: white;
}
h2 {
  font-weight: bold;
  color: white;
}

.main-content-container {
  position: absolute;
  left: 50%;
  top: 7%;
  transform: translateX(-50%);
  padding-bottom:40px;
}

.profile-card-top {
  /* background: transparent url("../img/banner-1280-384.png") repeat scroll center center; */
  background-color: #404040; /* <-- fallback bg color */
  background-size: cover;
  background-image: url(../img/banner-1280-384.png);
  width: 965px;
  height: 250px;
  padding: 12px;
  border-color: #b4b4b4;
  border-width: 1px;
  border-style: solid;
}

.profile-card-top p {
  color: white;
}
.profile-card-top-text {
  margin-left: 275px;
  font-size: 20px;
}

.profile-card-top-image {
  float:left;
}
.profile-card-top-image img {
  width: 250px;
  height: 250px;
  border-color: #b4b4b4;
  border-width: 2px;
  border-style: solid;
  border-radius: 10px;
}

.profile-card-bottom {
  /* background: url(../img/bg-1440p.png) no-repeat center center fixed; */
  float:left;
  background-color: #262626;
  border-color: #b4b4b4;
  border-width: 1px;
  border-style: solid;
  border-top: none;
  padding: 12px;
  width: fit-content;
  max-width: 966px;
  font-size: 22px;
}
.profile-card-bottom i {
  margin-left: 10px; 
  margin-top: 18px; 
  margin-bottom: 18px; 
  color: #bfbfbf;
}
.profile-card-bottom a {
  /* float: right; */
  margin-left: 10px; 
  color: #f6f6f6;
}
.profile-card-bottom a:hover {color: #c6c6c6;}

.profile-card-discordrpc {
  float:left;
  background-color: #262626;
  border-color: #b4b4b4;
  border-width: 1px;
  border-style: solid;
  border-top: none;
  padding: 12px;
  padding-top: 0px;
  width: 294px;
  height: 311px;
  font-size: 22px;
}

#lanyard-discord {
  max-width: 100%;
  margin-top: 10px;
}

.profile-card-discordrpc p {
  color: white;
}

.profile-card-spotify {
  float: left;
  background-color: #262626;
  border-color: #b4b4b4;
  border-width: 1px;
  border-style: solid;
  border-top: none;
  padding: 9px;
  padding-top: 0px;
  padding-right: 15px;
  width: 294px;
  height: 314px;
  font-size: 16px;
  color: white;
  max-width: 294px;
}

#spotify-albumArt {
  float: left;
  width: 75px;
  height: 75px;
  border-radius: 10px;
  border-style: solid;
  border-width: 2px;
  border-color:#b4b4b4;
  margin-top: -5px;
}

.spotify-info-text {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  margin-left: 85px;
  margin-top: -6px;
}

/* -- responsive styling [START] -- */

@media only screen 
and (max-width: 1920px) {
  .profile-card-discordrpc {
    width: 294px;
  }
  .profile-card-spotify {
    max-width: none;
    width: 293px;
  }
}
/* any small-width screen */
@media only screen 
and (max-width: 1000px) {
  .main-content-container {
    top: 4%;
  }
  .profile-card-top-image {
    float: none;
  }
  .profile-card-top-text {
    margin-left: 0px;
    font-size: 16px;
  }
  .profile-card-top {
    width: 326px;
    height: fit-content;
    padding: 9px;
  }
  .profile-card-bottom {
    width: 326px;
    padding: 9px;
  }
  .profile-card-discordrpc {
    width: 320px;
    height: fit-content;
  }
  #lanyard-discord {
    height: fit-content;
  }
  .profile-card-spotify {
    max-width: none;
    width: 320px;
    height: fit-content;
  }
}

/* 1792x828px at 326ppi | iPhone 11 / iPhone XR */
@media only screen 
and (device-width: 414px) 
and (device-height: 896px) 
and (-webkit-device-pixel-ratio: 2) {
  .main-content-container {
    top: 4%;
  }
  .profile-card-top-image {
    float: none;
  }
  .profile-card-top-text {
    margin-left: 0px;
    font-size: 16px;
  }
  .profile-card-top {
    width: 326px;
    height: fit-content;
    padding: 9px;
  }
  .profile-card-bottom {
    width: 326px;
    padding: 9px;
  }
  .profile-card-discordrpc {
    width: 320px;
    height: fit-content;
  }
  #lanyard-discord {
    height: fit-content;
  }
  .profile-card-spotify {
    max-width: none;
    width: 320px;
    height: fit-content;
  }
}
/* 2436x1125px at 458ppi | iPhone XS */
@media only screen 
and (device-width: 375px) 
and (device-height: 812px) 
and (-webkit-device-pixel-ratio: 3) {
  .main-content-container {
    top: 4%;
  }
  .profile-card-top-image {
    float: none;
  }
  .profile-card-top-text {
    margin-left: 0px;
    font-size: 16px;
  }
  .profile-card-top {
    width: 326px;
    height: fit-content;
    padding: 9px;
  }
  .profile-card-bottom {
    width: 326px;
    padding: 9px;
  }
  .profile-card-discordrpc {
    width: 320px;
    height: fit-content;
  }
  #lanyard-discord {
    height: fit-content;
  }
  .profile-card-spotify {
    max-width: none;
    width: 320px;
    height: fit-content;
  }
}
/* 2688x1242px at 458ppi | iPhone XS Max
 + 2688x1242px at 458ppi | iPhone 11 Pro Max */
@media only screen 
and (device-width: 414px) 
and (device-height: 896px) 
and (-webkit-device-pixel-ratio: 3) {
  .main-content-container {
    top: 4%;
  }
  .profile-card-top-image {
    float: none;
  }
  .profile-card-top-text {
    margin-left: 0px;
    font-size: 16px;
  }
  .profile-card-top {
    width: 326px;
    height: fit-content;
    padding: 9px;
  }
  .profile-card-bottom {
    width: 326px;
    padding: 9px;
  }
  .profile-card-discordrpc {
    width: 320px;
    height: fit-content;
  }
  #lanyard-discord {
    height: fit-content;
  }
  .profile-card-spotify {
    max-width: none;
    width: 320px;
    height: fit-content;
  }
}
/* 2436x1125px at 458ppi | iPhone 11 Pro
 + 2340x1080 pixels at 476ppi | iPhone 12/13 Mini */
@media only screen 
and (device-width: 375px) 
and (device-height: 812px) 
and (-webkit-device-pixel-ratio: 3) {
  .main-content-container {
    top: 4%;
  }
  .profile-card-top-image {
    float: none;
  }
  .profile-card-top-text {
    margin-left: 0px;
    font-size: 16px;
  }
  .profile-card-top {
    width: 326px;
    height: fit-content;
    padding: 9px;
  }
  .profile-card-bottom {
    width: 326px;
    padding: 9px;
  }
  .profile-card-discordrpc {
    width: 320px;
    height: fit-content;
  }
  #lanyard-discord {
    height: fit-content;
  }
  .profile-card-spotify {
    max-width: none;
    width: 320px;
    height: fit-content;
  }
}
/* 2532x1170 pixels at 460ppi | iPhone 13 Pro */
@media only screen 
and (device-width: 390px) 
and (device-height: 844px) 
and (-webkit-device-pixel-ratio: 3) {
  .main-content-container {
    top: 4%;
  }
  .profile-card-top-image {
    float: none;
  }
  .profile-card-top-text {
    margin-left: 0px;
    font-size: 16px;
  }
  .profile-card-top {
    width: 326px;
    height: fit-content;
    padding: 9px;
  }
  .profile-card-bottom {
    width: 326px;
    padding: 9px;
  }
  .profile-card-discordrpc {
    width: 320px;
    height: fit-content;
  }
  #lanyard-discord {
    height: fit-content;
  }
  .profile-card-spotify {
    max-width: none;
    width: 320px;
    height: fit-content;
  }
}
/* 2778x1284 pixels at 458ppi | iPhone 13 Pro Max */
@media only screen 
and (device-width: 428px) 
and (device-height: 926px) 
and (-webkit-device-pixel-ratio: 3) {
  .main-content-container {
    top: 4%;
  }
  .profile-card-top-image {
    float: none;
  }
  .profile-card-top-text {
    margin-left: 0px;
    font-size: 16px;
  }
  .profile-card-top {
    width: 326px;
    height: fit-content;
    padding: 9px;
  }
  .profile-card-bottom {
    width: 326px;
    padding: 9px;
  }
  .profile-card-discordrpc {
    width: 320px;
    height: fit-content;
  }
  #lanyard-discord {
    height: fit-content;
  }
  .profile-card-spotify {
    max-width: none;
    width: 320px;
    height: fit-content;
  }
}

/* -- responsive styling [END] -- */

